--- a/example/src/index.css
+++ b/example/src/index.css
@@ -1,5 +1,14 @@
-body {
+html, body, #root {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  width: 100%;
+  height: 100%;
+}
+
+h1 {
+  display: block;
+  color: #a7a7a7;
+  margin: 0;
+  padding-top: 30px;
+  text-align: center;
 }
